# cpack-exercise-wt2526

./: CMakeLists.txt  Dockerfile  docker-build.sh
cmake/: CPackConfig.cmake
